--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^2.4.2"
   },
   "scripts": {
-    "test": "mocha -r ts-node/register test/*.ts"
+    "build": "tsc",
+    "test": "mocha -r ts-node/register test/**/*.ts"
   }
 }
