--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "binarysearch": "^1.0.0",
     "js-range": "^1.0.0",
     "long": "^3.2.0",
-    "timeunit": "^1.1.1"
+    "prettyjson": "^1.2.1"
   },
   "devDependencies": {
     "@types/chai": "^4.0.1",
