--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   ],
   "main": "dist/index.js",
   "dependencies": {
+    "@types/express": "^4.0.36",
     "@types/node": "^8.0.14",
+    "finished": "^1.2.2",
     "js-range": "^1.0.0",
     "prettyjson": "^1.2.1",
     "statsd-client": "^0.4.0"
