--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "tsc",
     "test": "mocha -r ts-node/register test/**/*.ts",
     "pretty": "prettier 'src/**/*.ts' --write",
-    "lint": "tslint --config ./tslint.json --project ./tsconfig.json --format stylish",
+    "lint": "tslint --config ./tslint.json --project ./tsconfig.json --format stylish -e \"test/**\"",
     "fix": "tslint --config ./tslint.json --project ./tsconfig.json --format stylish --fix"
   }
 }
