--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "telemetri",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "files": [
     "dist"
   ],
@@ -9,6 +9,7 @@
     "@types/express": "^4.0.36",
     "@types/node": "^8.0.14",
     "finished": "^1.2.2",
+    "flat": "^4.0.0",
     "js-range": "^1.0.0",
     "prettyjson": "^1.2.1",
     "statsd-client": "^0.4.0"
