--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
 node_js:
 - 8
-script: yarn run test
+script:
+-  yarn run build
+-  yarn run test
 deploy:
   on:
     tags: true
