--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "telemetri",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "files": [
     "dist"
   ],
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "dependencies": {
     "@types/express": "^4.0.36",
     "@types/node": "^8.0.14",
