--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "telemetri",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "files": [
     "dist"
   ],
   "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "dependencies": {
     "@types/express": "^4.0.36",
     "@types/node": "^8.0.14",
