--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "test": "mocha -r ts-node/register test/**/*.ts",
     "pretty": "prettier 'src/**/*.ts' --write",
     "lint": "tslint --config ./tslint.json --project ./tsconfig.json --format stylish -e \"test/**\"",
-    "lint:fix": "yarn lint --fix",
-    "verify": "yarn lint && yarn test && yarn build"
+    "lint:fix": "npm run lint --fix",
+    "verify": "npm run lint && npm test && npm run build"
   }
 }
